Fix GitUpdater hanging forever on git pull.
Only stdout was drained, but git writes --progress/-v output to stderr.
Once the stderr pipe filled, git blocked and waitFor() never returned.
Use ProcessBuilder with merged streams, drop --progress, and disable
credential prompts.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01UoEnNEbo8pD35HJqAqAkFY